@@ -2422,6 +2422,10 @@ but in the short term your dwarves will get much more joyful.
 Internals: the thoughts are set to be very old, so that the game remove them
 quickly after you unpause.
 
+remove-stress
+=============
+Sets stress to -1,000,000; the normal range is 0 to 500,000 with very stable or very stressed dwarves taking on negative or greater values respectively.  Applies to the selected unit, or use "remove-stress all" to apply to all units.
+
 setfps
 ======
 
